# Conflux

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  run_comparison_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.personal_files/: conflux_developer_manual.md
conflux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
conflux/cli/: conflux_cli.py
conflux/core/: ast.py  ir_validators.py  registry.py  semantics.py  time.py
conflux/io/: emit_datalogmtl.py  emit_lars.py  formats.md  parse_datalogmtl.py  parse_lars.py
conflux/translators/: README.md  base.py
conflux/translators/datalogmtl_lars/: __init__.py  constraints.py  lars_to_mtl.py  mapping_tables.py  mtl_to_lars.py
conflux/utils/: data_comparison.py  diagnostics.py  logging.py  profiling.py
docs/: index.md
docs/design/: time-models.md
docs/examples/: README.md
docs/specs/: datalogmtl.md  lars.md  mapping-principles.md
grammars/: datalogmtl.g4  lars.g4  lars_syntax_cheatsheet.txt
scripts/: export_benchmark_suite.py  make_snapshot.py  run_examples.sh
tests/comparison/: test_data_diff.py
tests/data/datalogmtl/: lubm_10^2.txt  vaccination_data.txt
tests/e2e/: test_roundtrip_vaccination.py
tests/io/: test_parse_emit_datalogmtl.py  test_parse_emit_lars.py
tests/output/datalogmtl_to_lars/: lubm_lars_data.txt  lubm_lars_program.txt  vaccination_lars.txt  (+4 more)
tests/test_files/: run_lubm_example.py  run_vaccination_example.py  run_vaccination_example_minimal.py
tests/utils/: runners.py  test_data_comparison.py
(+8 files in other folders)
