[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conflux"
version = "0.1.0"
authors = [{name = "Conflux Contributors"}]
description = "Translation toolkit for stream reasoning frameworks."
dependencies = []

[project.scripts]
conflux = "conflux.cli.conflux_cli:main"

[tool.setuptools.packages]
# avoid picking up non-python directories such as grammars
find = { exclude = ["grammars"] }
